# RAG-system

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/: courses.json  digital-footprints.json
docs/: API.md  API_new.md  ARCHITECTURE.md  DEVELOPMENT.md
migrations/: README.md
src/api/: __main__.py  dependencies.py  exception_handlers.py  main.py  schemas.py
src/api/routers/: __init__.py  courses.py  db.py  recommendations.py  users.py
src/cli/: __init__.py  __main__.py  app.py  context.py  output.py
src/cli/commands/: __init__.py  courses.py  db.py  recommendations.py  users.py
src/database/: models.py  session.py
src/preprocessing/: __init__.py  chunker.py  embeddings.py
src/prompts/: recommendation_prompt.txt
src/rag_core/: __init__.py  embeddings.py  generator.py  indexer.py  llm.py  pipeline.py  prompt_builder.py  retriever.py  schemas.py
src/services/: recommendations.py
src/vector_db/: __init__.py  qdrant_client.py
tests/integration/: test_api.py
tests/unit/: test_rag_core.py
