[project]
name = "rag-system"
version = "0.1.0"
description = "Personalized educational course recommendation system"
requires-python = ">=3.12"

dependencies = []

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]
